--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,28 @@
+.traffic-light{
+    padding: 10px;
+    margin: auto;
+    border-radius: 15px;
+}
+.light{
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    background-color: whitesmoke;
+}
+.red{
+    background-color: red;
+}
+.yellow{
+    background-color: yellow;
+}
+.green{
+    background-color: green;
+}
+.light-glow{
+    box-shadow: 0px 0px 10px 5px lightyellow;
+}
+.pole{
+    height: 80px;
+    width: 10px;
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+}
